# hamplicons

./: .gitignore  CHANGES.md  README.md  hamplicons.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
hamplicons/: __init__.py  main.py
src/hamplicons/: main.py
tests/: test_normal.py  test_suite.py
tests/data/: targets.fa
tests/output/: hamp_out.xlsx
tests/output/hamp_out.merged/: index001.hist  index001.histogram  index001.stdout  index002.hist  index002.histogram  index002.stdout
